--- a/public/css/dash_global.css
+++ b/public/css/dash_global.css
@@ -40,7 +40,7 @@ section{
     margin: 0 0 0 10px;
 }
 #v1{
-    max-height: 600px;
+    /*max-height: 600px;*/
     overflow-y: scroll;
     margin: 0 0 20px 0;
 }
