--- a/public/css/dash_global.css
+++ b/public/css/dash_global.css
@@ -2,31 +2,77 @@
     margin: 0;
     padding: 0;
 }
-header{
-    height: 50px;
+body{
+    background-color: rgb(241 241 241);
 }
-ul{
-    max-width: 100%;
-    margin: 0 0 20px 0;
-    overflow-x: scroll;
+nav{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    background-color: rgba(0, 0, 0,1);
+}
+nav>ul{
     display: flex;
     flex-direction: row;
     list-style-type: none;
 }
-ul::-webkit-scrollbar{
-    width: 7px;
-    height: 7px;
+nav>ul>li{
+    padding: 10px 20px;
 }
-ul::-webkit-scrollbar-thumb{
+nav>ul>li:hover{
+    background-color: rgba(128, 128, 128, 1);
+}
+nav>ul>li.selected{
+    background-color: rgba(0, 128, 0,1);
+}
+nav>ul>li.selected:hover{
+    background-color: rgba(0, 128, 0,1);
+}
+nav>ul>li>a{
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
+    color: white;
+}
+nav>button{
+    padding: 5px 10px;
+    margin: 0 30px 0 0;
+    border: none;
+    border-radius: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    cursor: pointer;
+}
+nav>button>a{
+    text-decoration: none;
+    color: black;
+}
+#download{
+    display: flex;
+    flex-direction: row;
+    /*justify-content: center;*/
+    align-items: center;
+    padding: 10px 0;
     background: white;
-    transition: background 1s;
 }
-ul:hover::-webkit-scrollbar-thumb{
-    background: rgba(127, 127, 127, 0.6);
-    border-radius: 5px; 
+#download>h2{
+    margin: 0 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: green;
 }
-li{
-    margin: 10px 10px;
+#download>button{
+    padding: 10px 20px;
+    margin: 0 20px;
+    border-radius: 4px;
+    border: none;
+    background-color: rgba(127, 127, 127, 0.5);
+    font-size: x-large;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    cursor: pointer;
+}
+#download>button>a{
+    text-decoration: none;
+    color: black;
 }
 section{
     display: flex;
@@ -41,6 +87,9 @@ section{
 }
 #v1{
     /*max-height: 600px;*/
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     overflow-y: scroll;
     margin: 0 0 20px 0;
 }
@@ -49,7 +98,7 @@ section{
     height: 7px;
 }
 #v1::-webkit-scrollbar-thumb{
-    background: white;
+    background: transparent;
     transition: background 1s;
 }
 #v1:hover::-webkit-scrollbar-thumb{
@@ -60,20 +109,8 @@ section{
     align-content: center;
     margin: 10px 10px 0 0;
 }
-.card {
-    width: 200px;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-}
-/* On mouse-over, add a deeper shadow */
-.card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-
-/* Add some padding inside the card container */
-.container {
-    padding: 2px 16px;
-}
-footer{
-    height: 50px;
+#v2{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
