--- a/public/css/dash_tab.css
+++ b/public/css/dash_tab.css
@@ -3,6 +3,11 @@
     overflow-y: scroll;
     margin: 0 0 20px 0;
 }
+#pgnt{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10px;
+}
 
 table{
     padding: 0 0 5px 0;
@@ -17,6 +22,10 @@ table tr th{
     color: white;
     background-color: rgba(127, 127, 127, 1);
     font-family: sans-serif;
+}
+table tr th a{
+    text-decoration: none;
+    color: white;
 }
 table tr.head{
     border-radius: 5px 5px 0 0;
@@ -51,6 +60,21 @@ table tr td a{
 }
 .tr2{
 
+}
+
+#pagination a {
+    color: black;
+    padding: 5px 10px;
+    text-decoration: none;
+}
+#pagination a.active {
+    background-color: #4CAF50;
+    color: white;
+    border-radius: 5px;
+}
+#pagination a:hover:not(.active) {
+    background-color: #ddd;
+    border-radius: 5px;
 }
 
 @media screen and (max-width: 1240px) {
